--- a/QuanLyQuanCafe/Properties/Resources.resx
+++ b/QuanLyQuanCafe/Properties/Resources.resx
@@ -142,4 +142,10 @@
   <data name="a0164_sl" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\a0164_sl.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Picture\empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="using" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Picture\using.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
