--- a/QuanLyQuanCafe/Properties/Resources.resx
+++ b/QuanLyQuanCafe/Properties/Resources.resx
@@ -148,4 +148,10 @@
   <data name="using" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Picture\using.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="available" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Picture\available.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="occupy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Picture\occupy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
