--- a/QuanLyQuanCafe/VIEW/frmService.resx
+++ b/QuanLyQuanCafe/VIEW/frmService.resx
@@ -349,4 +349,80 @@
   <metadata name="quanLyQuanCafeDataSet11.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABILAAASCwAAAAAAAAAA
+        AAD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AFFRUf9xcXH/cXFx/3Fxcf9xcXH/cXFx/3Fxcf9xcXH/cXFx/3Fxcf9xcXH/cXFx/3Fx
+        cf9xcXH/cXFx/3Fxcf9xcXH/cXFx/3Fxcf9xcXH/cXFx/3Fxcf9xcXH/cXFx/3Fxcf9xcXH/cXFx/3Fx
+        cf9xcXH/cXFx/3Fxcf9RUVH/ZmZm/6urq/+rq6v/q6ur/6urq/+rq6v/q6ur/6urq/+rq6v/q6ur/6ur
+        q/+rq6v/q6ur/6urq/+rq6v/q6ur/6urq/+rq6v/q6ur/6urq/+rq6v/q6ur/6urq/+rq6v/q6ur/6ur
+        q/+rq6v/q6ur/6urq/+rq6v/q6ur/2ZmZv97e3sAe3t7///////Ozs7/zs7O/87Ozv/Ozs7/zs7O/87O
+        zv/Ozs7/zs7O/87Ozv/Ozs7/zs7O/87Ozv/Ozs7/zs7O/87Ozv/Ozs7/zs7O/87Ozv/Ozs7/zs7O/87O
+        zv/Ozs7/zs7O/87Ozv/Ozs7/zs7O//////97e3v/e3t7AP///wB7e3v//////8/Pz//Pz8//z8/P/8/P
+        z//Pz8//z8/P/8/Pz//Pz8//z8/P/1AyMf9QMjH/UDIx/1AyMf9QMjH/UDIx/1AyMf9QMjH/z8/P/8/P
+        z//Pz8//z8/P/8/Pz//Pz8//z8/P/8/Pz//Pz8///////3t7e/////8A////AHt7e///////0NDQ/9DQ
+        0P/Q0ND/0NDQ/9DQ0P/Q0ND/0NDQ/9DQ0P/Q0ND/UDIx/zVEWf81RFn/NURZ/zVEWf81RFn/NURZ/1Ay
+        Mf/Q0ND/0NDQ/9DQ0P/Q0ND/0NDQ/9DQ0P/Q0ND/0NDQ/9DQ0P//////e3t7/////wD///8Ae3t7////
+        ///S0tL/0tLS/9LS0v/S0tL/0tLS/9LS0v/S0tL/0tLS/9LS0v9QMjH/NURZ/zREWv80RFr/NERa/zRE
+        Wv81RFn/UDIx/9LS0v/S0tL/0tLS/9LS0v/S0tL/0tLS/9LS0v/S0tL/0tLS//////97e3v/////AP//
+        /wB7e3v/////////////////////////////////////////////////1NTU/1AyMf81RFn/NERa/zRE
+        Wv80RFr/NERa/zVEWf9QMjH/1NTU/////////////////////////////////////////////////3t7
+        e/////8A////AHt7e///////UDIx/1AyMf9QMjH/UDIx/1AyMf9QMjH/UDIx/1AyMf/W1tb/UDIx/zVE
+        Wf80RFr/NERa/zREWv80RFr/NURZ/1AyMf/W1tb/UDIx/1AyMf9QMjH/UDIx/1AyMf9QMjH/UDIx/1Ay
+        Mf//////e3t7/////wD///8Ae3t7//////9QMjH/NURZ/zVEWf81RFn/NURZ/zVEWf81RFn/UDIx/9fX
+        1/9QMjH/NURZ/zREWv80RFr/NERa/zREWv81RFn/UDIx/9fX1/9QMjH/NURZ/zVEWf81RFn/NURZ/zVE
+        Wf81RFn/UDIx//////97e3v/////AP///wB7e3v//////1AyMf81RFn/NERa/zREWv80RFr/NERa/zVE
+        Wf9QMjH/2dnZ/1AyMf8pKSn/KSkp/zREWv80RFr/NERa/zVEWf9QMjH/2dnZ/1AyMf81RFn/NERa/zRE
+        Wv80RFr/NERa/zVEWf9QMjH//////3t7e/////8A////AHt7e///////UDIx/zVEWf80RFr/NERa/zRE
+        Wv80RFr/NURZ/1AyMf/b29v/UDIx/zVEWf80RFr/NERa/zREWv80RFr/NURZ/1AyMf/b29v/UDIx/zVE
+        Wf80RFr/NERa/zREWv80RFr/NURZ/1AyMf//////e3t7/////wD///8Ae3t7//////9QMjH/NURZ/zRE
+        Wv80RFr/NERa/zREWv81RFn/UDIx/97e3v9QMjH/NURZ/zREWv80RFr/NERa/zREWv81RFn/UDIx/97e
+        3v9QMjH/NURZ/zREWv80RFr/NERa/zREWv81RFn/UDIx//////97e3v/////AP///wB7e3v//////1Ay
+        Mf9ofJn/aX6b/2l+m/9pfpv/aX6b/2h8mf9QMjH/4ODg/1AyMf9ofJn/aX6b/2l+m/9pfpv/aX6b/2h8
+        mf9QMjH/4ODg/1AyMf9ofJn/aX6b/2l+m/9pfpv/aX6b/2h8mf9QMjH//////3t7e/////8A////AHt7
+        e///////UDIx/2h8mf9pfpv/aX6b/2l+m/9pfpv/aHyZ/1AyMf/i4uL/UDIx/2h8mf9pfpv/aX6b/2l+
+        m/9pfpv/aHyZ/1AyMf/i4uL/UDIx/2h8mf9pfpv/aX6b/2l+m/9pfpv/aHyZ/1AyMf//////e3t7////
+        /wD///8Ae3t7//////9QMjH/aHyZ/2l+m/9pfpv/aX6b/2l+m/9ofJn/UDIx/+Pj4/9QMjH/aHyZ/2l+
+        m/9pfpv/aX6b/2l+m/9ofJn/UDIx/+Pj4/9QMjH/aHyZ/2l+m/9pfpv/aX6b/2l+m/9ofJn/UDIx////
+        //97e3v/////AE9PTwB7e3v//////1AyMf9ofJn/aX6b/2l+m/9pfpv/aX6b/2h8mf9QMjH/5eXl/1Ay
+        Mf9ofJn/aX6b/2l+m/9pfpv/aX6b/2h8mf9QMjH/5eXl/1AyMf9ofJn/aX6b/2l+m/9pfpv/aX6b/2h8
+        mf9QMjH//////3t7e/9PT08AAAAAAHt7e//Hx8f/T0xL/1JUWP9gboL/aHyZ/2h8mf9ofJn/aHyZ/1A7
+        O/9hYWH/T0xL/2Bugv9ofJn/aHyZ/2h8mf9ofJn/YG6B/09MS/9hYWH/UDs6/2h8mf9ofJn/aHyZ/2h8
+        mf9gboH/UlRY/09MS//Jycn/e3t7/wAAAAAAAAAAe3t7/1hORf9KLxz/Si8c/05BOP9QMjH/UDIx/1Ay
+        Mf9QMjH/T0E5/0ovHP9KLxz/TkE4/1AyMf9QMjH/UDIx/1AyMf9PQTn/Si8c/0ovHP9OQTj/UDIx/1Ay
+        Mf9QMjH/UDIx/09BOf9KLxz/Si8c/1xRSf97e3v/AAAAAAAAAAB2dnb/Si8c/186H/9eOh//Si8c/9jY
+        2P/q6ur/6urq/9jY2P9KLxz/Xzof/146H/9KLxz/2NjY/+rq6v/q6ur/2NjY/0ovHP9fOh//Xjof/0ov
+        HP/Y2Nj/6urq/+rq6v/Y2Nj/Si8c/186H/9eOh//Si8c/3Z2dv8AAAAAT09PIVpWUv9MLhn/Zz8i/2c/
+        Iv9MLhn/eHNw/9fX1//X19f/dnJu/0wuGf9nPyL/Zz8i/0wuGf94c3D/19fX/9fX1/92cm7/TC4Z/2c/
+        Iv9nPyL/TC4Z/3hzcP/X19f/19fX/3Zybv9MLhn/Zz8i/2c/Iv9MLhn/WlZS/09PTyFPSkb/TDUl/1g2
+        Hf9nPyL/Zz8i/1g2Hf9MNSb/T0pG/09KRv9MNSX/WDYd/2c/Iv9nPyL/WDYd/0w1Jv9PSkb/T0pG/0w1
+        Jf9YNh3/Zz8i/2c/Iv9YNh3/TDUm/09KRv9PSkb/TDUl/1g2Hf9nPyL/Zz8i/1g2Hf9MNSb/T0pG/0gs
+        GP9ZNh3/Zz8i/2c/Iv9nPyL/Zz8i/1k2Hf9MLhn/TC4Z/1k2Hf9nPyL/Zz8i/2c/Iv9nPyL/WTYd/0wu
+        Gf9MLhn/WTYd/2c/Iv9nPyL/Zz8i/2c/Iv9ZNh3/TC4Z/0wuGf9ZNh3/Zz8i/2c/Iv9nPyL/Zz8i/1k2
+        Hf9ILBj/SCwY/2c/Iv9nPyL/Zz8i/2c/Iv9nPyL/Zz8i/2c/Iv9nPyL/Zz8i/2c/Iv9nPyL/Zz8i/2c/
+        Iv9nPyL/Zz8i/2c/Iv9nPyL/Zz8i/2c/Iv9nPyL/Zz8i/2c/Iv9nPyL/Zz8i/2c/Iv9nPyL/Zz8i/2c/
+        Iv9nPyL/Zz8i/0gsGP91QiW+h04r/5ZcMv+WXDL/q3xa/8CdhP/AnYP/oGtF/5ZcMv+WXDL/llwy/5Zc
+        Mv+WXDL/llwy/7ePcv/AnYT/wJ2E/7WMbv+WXDL/llwy/5ZcMv+WXDL/llwy/5ZcMv+ga0X/wJ2D/8Cd
+        hP+rfFr/llwy/5ZcMv+HTiv/dUIkwm9DJSJuPSL2ilQu/5BYMP+nelv/vJuD/7ybg/+2knf/kVoy/5BY
+        MP+QWDD/kFgw/5BYMP+QWDD/roVo/7ybg/+8m4P/rIJk/5BYMP+QWDD/kFgw/5BYMP+QWDD/kVoy/7aS
+        d/+8m4P/vJuD/6d6W/+QWDD/i1Qu/249IvZvQyUiAAAAAGg/IX50RiX/iVQt/4pWL/+xj3X/uJiB/7iY
+        gf+hd1f/iVQt/4lULf+JVC3/iVQt/4lULf+ke13/uJiB/7iYgf+ieFn/iVQt/4lULf+JVC3/iVQt/4lU
+        Lf+hd1f/uJiB/7iYgf+xj3X/ilYv/4lULf90RiX/aD8hggAAAAAAAAAAYjwgBF04H9hyRSb/gU8r/41f
+        P/+zlYD/s5WA/7OUfv+JWzn/gU8r/4FPK/+BTyv/gU8r/5lwU/+zlYD/s5WA/5duUP+BTyv/gU8r/4FP
+        K/+BTyv/iVs5/7OUfv+zlYD/s5WA/41fP/+BTyv/ckUm/105H9piPCAEAAAAAAAAAAAAAAAAWzgePFQ0
+        HP14SSj/eUoo/5l2XP+vkn7/r5J+/6KCav96Syn/eUoo/3lKKP95Sij/jGRG/6+Sfv+vkn7/i2JE/3lK
+        KP95Sij/eUoo/3pLKf+igmr/r5J+/6+Sfv+Zdlz/eUoo/3hJKP9UNBz9WzgePAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAVDMboGA6H/9yRSX/dkor/6WIdP+qj3z/qo98/4lkSf9yRSX/ckUl/3JFJf+AWDv/qo98/6qP
+        fP9/Vzn/ckUl/3JFJf9yRSX/iWRJ/6qPfP+qj3z/pYh0/3ZKK/9yRSX/YDof/1QzG6QAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABRMhoPTC4Y62I8IP9rQiP/f1xB/6aOe/+mjnv/o4p2/3FKLP9rQiP/a0Ij/3RO
+        Mf+mjnv/po57/3NNL/9rQiP/a0Ij/3FKLP+kinf/po57/6aOe/9/W0D/a0Ij/2I8IP9MLhjrUTIaDwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wBOMBpbSCwY/0gsGP9ILBj/fGhZ/5GAdP+RgHT/emZX/0gs
+        GP9ILBj/TDAc/5GAdP+RgHT/Si8b/0gsGP9ILBj/emZX/5GAdP+RgHT/e2ZY/0gsGP9ILBj/SCwY/04w
+        Glv///8AAAAAAAAAAAAAAAAA/////wAAAAAAAAAAgAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAA
+        AAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAGAAAABgAAAAYAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AACAAAABgAAAAcAAAAPgAAAH4AAAB/AAAA8=
+</value>
+  </data>
 </root>
